Implemented find owner functionality. Closes #53

--- a/pet-clinic-web/src/main/resources/messages/messages_pt_BR.properties
+++ b/pet-clinic-web/src/main/resources/messages/messages_pt_BR.properties
@@ -1,8 +1,8 @@
 welcome=Bem vindo
-required=obrigatório
-notFound=não foi encontrado
+required=obrigat\u00F3rio
+notFound=n\u00E3o foi encontrado
 duplicate=em uso
-nonNumeric=somente números
-duplicateFormSubmission=Submissão duplicada não é permitido
-typeMismatch.date=data inválida
-typeMismatch.birthDate=data inválida
+nonNumeric=somente n\u00FAmeros
+duplicateFormSubmission=Submiss\u00E3o duplicada n\u00E3o \u00E9 permitido
+typeMismatch.date=data inv\u00E1lida
+typeMismatch.birthDate=data inv\u00E1lida
